--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.9",
-    "react-router-dom": "^5.3.4",
+    "react-router-dom": "^6.30.1",
+    "react-to-print": "^3.1.1",
     "style-loader": "^1.2.1",
     "webpack-cli": "^3.3.12"
   },
@@ -40,6 +41,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@testing-library/react": "^11.0.4",
+    "@types/react-router-dom": "^5.3.3",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
