--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/pickers": "^3.3.11",
     "@reduxjs/toolkit": "^2.8.2",
     "css-loader": "^4.3.0",
     "cypress": "^9.5.0",
@@ -21,6 +24,7 @@
     "react-redux": "^7.2.9",
     "react-router-dom": "^6.30.1",
     "react-to-print": "^3.1.1",
+    "redux-thunk": "^3.1.0",
     "style-loader": "^1.2.1",
     "webpack-cli": "^3.3.12"
   },
@@ -52,6 +56,7 @@
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.4.2",
     "react-test-renderer": "^16.13.1",
+    "typescript": "^5.9.2",
     "webpack": "^4.44.2",
     "webpack-dev-server": "^3.11.0",
     "xml-js": "^1.6.11"
